--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".IntroActivity">
+        <activity android:name=".intro.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IntroActivity2"></activity>
+
+
+        <activity android:name=".intro.IntroActivity2">
+        </activity>
 
         <activity android:name=".MainActivity" >
         </activity>
 
+        <activity android:name=".InOutManageActivity" >
+        </activity>
+
+        <activity android:name=".RegisterChipActivity" >
+        </activity>
 
     </application>
 
